# src/routes/user.router.js
@@ -1,15 +1,17 @@
 import { Router } from "express";
-import { createUser } from "../controller/user.controller.js";
-import { reqControl } from "../middleware/reqCorrecionUser.js";
+import { createUser, loginUser } from "../controller/user.controller.js";
+import { reqCreateControl, reqLoginControl } from "../middleware/reqCorrecionUser.js";
 import { esAdmin } from "../middleware/comprobarRango.js"
 
 const router = Router() // usa la función Router de Express, para construir las rutas 
 
 
-router.post("/create", reqControl, createUser) // función que crea usuario, userController.js
+router.post("/create", reqCreateControl, createUser) // función que crea usuario, userController.js
+
+
+router.post("/login", reqLoginControl, loginUser) // función para iniciar seción, userController.js
 
 /*
-router.post("/login", reqControl, loginUser) // función para iniciar seción, userController.js
 router.put("/actualizar", reqControlUpdateRango, esAdmin, actualizarRangoUser)
 */
 
